fixed spacing

--- a/index.css
+++ b/index.css
@@ -179,7 +179,8 @@ a:hover{
 }
 
 #skills-title{
-    padding-top: 20vh;
+    padding-top: 15vh;
+    padding-bottom: 10vh;
 }
 
 .skills-box-row{
